<resources>
    <string name="app_name">NOW TV Password Reset</string>

    <!-- Strings related to login -->
    <string name="prompt_password1">Enter your new password</string>
    <string name="prompt_password2">Re-enter your new password</string>
    <string name="action_set_password">Set password</string>
    <string name="error_passwords_different">Error: The passwords entered were different</string>
    <string name="error_invalid_password">The passwords entered were invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="password_set_successfully">Your password was successfully set</string>
</resources>
